AC_INIT(src/proc.c)

AC_PROG_CC
AC_LANG_C
AC_PROG_INSTALL

AC_PROG_MAKE_SET

AC_PATH_XTRA
dnl Checks for libraries.
dnl Replace `main' with a function in -lncurses:
AC_CHECK_LIB(nsl, gethostname)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(m, sin)
AC_CHECK_LIB(dl, dlopen)

AC_HEADER_STDC
VERSION="0.1"
AC_SUBST(VERSION)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_UTIME_NULL
AC_CHECK_FUNCS(mkdir rmdir socket)

AC_OUTPUT(src/Makefile Makefile)
